[ThanhTai] update download CV

--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                      <br>
                      <span class="about-second-line"> With years of expertise as a professional Web developer, I have honed the skills and knowledge required to ensure your project's success. I genuinely enjoy every step of the process.</span>
                <div class="cv">
-                <a href="#"><button>Download <span class="colors">CV</span></button></a>
+                <a href="ThanhTai_Nguyen_Resume_CSharpDeveloper.pdf" download><button>Download <span class="colors">CV</span></button></a>
             </div>
             </div>
             <!--about picture-->
