--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
                      <br>
                      <span class="about-second-line"> With years of expertise as a professional Web developer, I have honed the skills and knowledge required to ensure your project's success. I genuinely enjoy every step of the process.</span>
                <div class="cv">
-                <a href="ThanhTai_Nguyen_Resume_CSharpDeveloper.pdf" download><button>Download <span class="colors">CV</span></button></a>
+                <a href="ThanhTai_Nguyen_Resume_FullStackDeveloper.pdf" download><button>Download <span class="colors">CV</span></button></a>
             </div>
             </div>
             <!--about picture-->
@@ -420,23 +420,23 @@
                  </div>
                  <div class="portfolio portfolio-second">
                     <div class="portfolio-image">
-                        <img src="images/portfolio-second.jpg" alt="portfolio-second">
+                        <img src="images/BrainRotAlert.jpg" alt="portfolio-second">
                     </div>
                     <div class="portfolio-text">
-                        <h2>Note Sphere</h2>
-                        <p>Organize your thoughts and ideas effortlessly with this minimalist note-taking app. Featuring tagging, categorization, and a powerful search function, it ensures your notes are always within reach when you need them.</p>
-                        <div class="button"><a href="#"><button><span class="index"> Coming Soon<i class="gg-arrow-right"></i></span></button></a></div>
+                        <h2>BrainRot Alert - Focus Mode</h2>
+                        <p>Fight digital addiction with BrainRot Alert - a Chrome extension that monitors your browsing habits and alerts you when consuming too much low-quality content. Features customizable limits, usage statistics, and website blocking. Built with JavaScript and Chrome Extension APIs, prioritizing privacy with local-only data storage.</p>
+                        <div class="button"><a href="https://github.com/TaiThanhhhh/BrainRot-Alert" target="_blank"><button><span class="index">View Project<i class="gg-arrow-right"></i></span></button></a></div>
                     </div>
                 </div>
              
                 <div class="portfolio portfolio-third">
                     <div class="portfolio-image">
-                        <img src="images/portfolio-third.jpg" alt="portfolio-third">
+                        <img src="images/enhanceCreditScore_VPBank.png" alt="portfolio-third">
                     </div>
                     <div class="portfolio-text">
-                        <h2>Portfolio Next</h2>
-                        <p>A modern and customizable portfolio website to showcase your skills, projects, and experience. Built with responsive design and easy content management, it's perfect for making a lasting impression online.</p>
-                        <div class="button"><a href="#"><button><span class="index"> Coming Soon<i class="gg-arrow-right"></i></span></button></a></div>
+                        <h2>Boost Your Credit with VPBank</h2>
+                        <p>Discover expert tips and tools from VPBank to improve your credit score, manage your financial history effectively, and unlock better loan opportunities. Access easy credit checks via CIC and build a stronger financial future today.</p>
+                        <div class="button"><a href="https://vpbank-credit-page.onrender.com/" target="_blank"><button><span class="index">View Project<i class="gg-arrow-right"></i></span></button></a></div>
                     </div>
                 </div>
                 <div class="portfolio portfolio-fourth">
